# ki-sast-analyzer

./: .gitignore  README.md  brakeman-report.json  pyproject.toml
src/ki_sast_analyzer/: __init__.py  cli.py  models.py
src/ki_sast_analyzer/core/: ai_scorer.py  heuristic_scorer.py  ranking_engine.py  risk_scoring_service.py
src/ki_sast_analyzer/input/: brakeman_adapter.py  brakeman_codes.py  git_context_fetcher.py  sast_report_loader.py
src/ki_sast_analyzer/output/: report_generator.py
tests/: test_cli.py  test_models_and_adapter.py
